Tue Aug  4 15:06:58 2009  Akinori MUSHA  <knu@iDaemons.org>

	* lib/ipaddr.rb (IPAddr#{eql?,hash}): Add IPAddr#{eql?,hash} so
	  that an IPAddr object can be used as a hash key, a set element,
	  etc.; suggested by Nick Brown <nick@nick-brown.com>.

Tue Aug  4 13:07:10 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/oniguruma.h (ONIG_SYN_WARN_CC_DUP): defined.
	* regparse.h (ScanEnv): add warnings_flag.
	* regparse.c (CC_DUP_WARN): defined for warn duplicated characters in
	  character class of regexp. [ruby-core:24593]
	  (add_code_range_to_buf): add CC_DUP_WARN.
	  (next_state_val): add CC_DUP_WARN.
	  (OnigSyntaxRuby): add ONIG_SYN_WARN_CC_DUP.
	  (SET_ALL_MULTI_BYTE_RANGE): add env to arguments.
	  (add_code_range): ditto.
	  (add_code_range_to_buf): ditto.
	  (not_code_range_buf): ditto.
	  (or_code_range_buf): ditto.
	  (and_code_range1): ditto.
	  (and_code_range_buf): ditto.
	  (and_cclass): ditto.
	  (or_cclass): ditto.
	  (add_ctype_to_cc_by_range): ditto.
	  (add_ctype_to_cc): ditto.
	  (parse_char_class): ditto.

Tue Aug  4 12:40:45 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/encdb.c (ENC_SET_BASE): fix typo.
	  patch by ujihisa [ruby-dev:39004]

Tue Aug  4 09:41:11 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/big5.c (EncLen_Big5): back to original Big5 table.
	  (EncLen_Big5_HKSCS): for Big5-HKSCS.
	  (trans): add the lead byte table for Big5-HKSCS.
	  (big5_mbc_enc_len): abstract function for Big5 series.
	  (big5_mbc_enc_len): for Big5.
	  (big5_hkscs_mbc_enc_len): for Big5-HKSCS.
	  (BIG5_HKSCS_P): added.
	  (BIG5_ISMB_FIRST): add routine for Big5-HKSCS.
	  (big5_hkscs): add for Big5-HKSCS.

Tue Aug  4 09:33:54 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (rb_enc_set_base): Add for setting base encoding
	  with their names. this is internal function.

	* template/encdb.h.tmpl: specify ENC_SET_BASE for second encodings in
	  each encoding files.

	* enc/encdb.c (rb_enc_set_base): add a declaration.